# ai-invention-a4987d-uncertainty-aware-predicate-grounding-vi

./: README.md
chat/messages/: README.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  append_bib.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  DATASET_SUMMARY.md  FINAL_SUMMARY.md  data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/dataset-1/src/full_data_out/: full_data_out_ruletaker_4.json
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README.md  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  results.json  results_10.json  test_results.json
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  research_out.json  (+1 more)
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  method_imports.py  method_out.json  method_simple.py  preview_method_out.json  pyproject.toml  test_components.py  test_imports.py  test_sentence_transformers.py
round-2/experiment-1/src/full_data_out/: full_data_out_clutrr.json
round-2/research-1/: README.md
(+59 files in other folders)
